--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "checkJs": true,
         "strictNullChecks": true,
+        "lib": ["DOM"],
         "target": "esnext"
     }
 }
