Simple type fixes

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "checkJs": true,
         "strictNullChecks": true,
-        "lib": ["DOM"],
+        "lib": ["DOM", "DOM.Iterable", "ES2022"],
         "target": "esnext"
     }
 }
